--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="noindex">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <meta name="description" content="A website to see how your Spotify trends">
+    <meta name="author" content="Jack Garabedian">
+    <meta name="keywords" content="Spotify, Python, Artists, Tracks">
     <!--    Bootstrap-->
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     {% block extra_head %}{% endblock %}
 
     {% block extra_scripts %}{% endblock %}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150551765-5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-150551765-5');
+    </script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,6 +39,9 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
         {% if session.logged_in %}
+      <li class="nav-item">
+          <a class="nav-link" href="/favorites">Favorites</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
