--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,14 +1,54 @@
 {% extends "base.html" %}
 
+{% block extra_head %}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/favorites.css') }}" />
+<script type="text/javascript" src="{{ url_for('static', filename='js/favorites.js') }}"></script>
+{% endblock %}
+
 {% block page_header %}
 Your favorites
 {% endblock %}
 
 {% block content %}
-
+<h5>Top tracks last 6 months</h5>
+<div class="row mb-4">
+    <div id="tracksCarousel" class="carousel slide w-100" data-ride="carousel">
+        <ol class="carousel-indicators">
+            {% for track in tracks['items'] %}
+                <li data-target="#tracksCarousel" data-slide-to="{{ loop.index - 1 }}" class=" {{ 'active' if loop.index == 1 }} "></li>
+            {% endfor %}
+        </ol>
+        <div class="carousel-inner">
+            {% for track in tracks['items'] %}
+            <div class="carousel-item {{ 'active' if loop.index == 1 }}">
+                <img src="{{ track['album']['images'][1]['url'] }}" class="track__album d-block mr-auto ml-auto">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>{{ loop.index }}. {{ track.name }} </h5>
+                    <p>
+                        {% for artist in track.artists %}
+                            {{ artist.name }}{% if not loop.last %}, {% endif %}
+                        {% endfor %}
+                    </p>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#tracksCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#tracksCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+</div>
 <div class="row">
     <div class="col">
         <div class="list-group">
+            <li class="list-group-item list-group-item-primary">
+                Your top artists
+            </li>
             {% for artist in artists['items'] %}
             <li class="list-group-item">
                 {{ artist.name }}
@@ -18,6 +58,9 @@ Your favorites
     </div>
     <div class="col">
         <div class="list-group">
+            <li class="list-group-item list-group-item-primary">
+                Your top tracks
+            </li>
             {% for track in tracks['items'] %}
                 <li class="list-group-item">
                     {{ track.name }}<br>
@@ -25,7 +68,11 @@ Your favorites
                         {{ artist.name }}{% if not loop.last %}, {% endif %}
                     {% endfor %}
                 </li>
+
             {% endfor %}
+        </div>
+        <div>
+            {{ tracks['items'][0] }}
         </div>
     </div>
 </div>
