--- a/templates/base.html
+++ b/templates/base.html
@@ -35,15 +35,23 @@
 
   <div class="collapse navbar-collapse" id="navbarContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item {% if request.path == '/' %} active {% endif %}">
+        <a class="nav-link" href="{{ url_for('index') }}">Home
+            {% if request.path == '/' %}
+                <span class="sr-only">(current)</span>
+            {% endif %}
+        </a>
       </li>
         {% if session.logged_in %}
-      <li class="nav-item">
-          <a class="nav-link" href="/favorites">Favorites</a>
+      <li class="nav-item {% if request.path == '/favorites' %} active {% endif %}">
+          <a class="nav-link" href="{{ url_for('favorites') }}">Favorites
+            {% if request.path == '/favorites' %}
+                <span class="sr-only">(current)</span>
+            {% endif %}
+          </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
+        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
       </li>
         {% endif %}
     </ul>
