--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -10,15 +10,45 @@ Your favorites
 {% endblock %}
 
 {% block content %}
-<h5>Top tracks last 6 months</h5>
-<div class="row mb-4">
-    <div id="tracksCarousel" class="carousel slide w-100" data-ride="carousel">
+<div class="row">
+<section class="mb-4 col-lg-6 col-sm-12">
+    <h5>Top Artists last 6 months</h5>
+    <div id="artistCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            {% for artist in artists['items'] %}
+                    <li data-target="#artistCarousel" data-slide-to="{{ loop.index - 1 }}" class=" {{ 'active' if loop.index == 1 }}"></li>
+            {% endfor %}
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            {% for artist in artists['items'] %}
+                <div class="carousel-item {{ 'active' if loop.index == 1 }}">
+                    <img src="{{ artist['images'][1]['url'] }}" class="track__album d-block mr-auto ml-auto">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>{{ artist['name'] }}</h3>
+                        <h5>Popularity: {{ artist['popularity'] }}</h5>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#artistCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#artistCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
+<section class="mb-4 col-lg-6 col-sm-12">
+    <h5>Top tracks last 6 months</h5>
+    <div id="tracksCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             {% for track in tracks['items'] %}
                 <li data-target="#tracksCarousel" data-slide-to="{{ loop.index - 1 }}" class=" {{ 'active' if loop.index == 1 }} "></li>
             {% endfor %}
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner" role="listbox">
             {% for track in tracks['items'] %}
             <div class="carousel-item {{ 'active' if loop.index == 1 }}">
                 <img src="{{ track['album']['images'][1]['url'] }}" class="track__album d-block mr-auto ml-auto">
@@ -33,15 +63,16 @@ Your favorites
             </div>
             {% endfor %}
         </div>
+        <a class="carousel-control-prev" href="#tracksCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#tracksCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="carousel-control-prev" href="#tracksCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#tracksCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+</section>
 </div>
 <div class="row">
     <div class="col">
@@ -50,11 +81,13 @@ Your favorites
                 Your top artists
             </li>
             {% for artist in artists['items'] %}
-            <li class="list-group-item">
-                {{ artist.name }}
-            </li>
+                <a href="{{ artist['external_urls']['spotify'] }}" target="_blank" class="list-group-item list-group-item-action">
+                    {{ artist.name }}
+                </a>
             {% endfor %}
+
         </div>
+<!--        {{ artists['items'][0] }}-->
     </div>
     <div class="col">
         <div class="list-group">
@@ -71,9 +104,9 @@ Your favorites
 
             {% endfor %}
         </div>
-        <div>
-            {{ tracks['items'][0] }}
-        </div>
+<!--        <div>-->
+<!--            {{ tracks['items'][0] }}-->
+<!--        </div>-->
     </div>
 </div>
 
